added redux, and implemented userReducer and userActions to header and app components

--- a/src/component/form-input/form-input.style.scss
+++ b/src/component/form-input/form-input.style.scss
@@ -47,8 +47,8 @@ input[type='password'] {
     left: 5px;
     top: 10px;
     transition: 300ms ease all;
+}
 
-    &.shirink {
-        @include shrinkLabel();
-    }
+#shrink {
+    @include shrinkLabel();
 }
